class7/clusterip.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: artemis


---
apiVersion: v1
kind: Service
metadata:
  name: artemis
  namespace: artemis
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: artemis
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

# k apply -f clusterip.yaml
# k delete -f clusterip.yaml
