class7/lb.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: artemis

---
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: team2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: team2
  template:
    metadata:
      labels:
        app: team2
    spec:
      containers:
      - name: tools
        image: farrukhsadykov/tools:v6
      - name: artemis
        image: farrukhsadykov/artemis:9.0.0            # artemis app
        ports:
          containerPort: 5000
      - name: team2
        image: wordpress:latest                        # webserver
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: artemis
  namespace: artemis
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: artemis
  ports:
  - name: webserver
    protocol: TCP
    port: 80
    targetPort: 80      # Targets the 'web' container
  - name: artemis
    protocol: TCP
    port: 5000
    targetPort: 5000    # Targets the 'artemis' container



# k apply -f lb.yaml

# k delete -f lb.yaml
