class7/deny.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-netpol
  namespace: default
spec:
  podSelector: {}
  policyTypes:
  - Ingress
