class7/diff_ns.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-development-to-mysql
  namespace: default  
spec:
  podSelector:
    matchLabels:
      app: mysql
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          app: development
    ports:
    - protocol: TCP
      port: 3306


---
apiVersion: v1
kind: Namespace
metadata:
  name: development
  labels:
    app: development


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: team2
  namespace: development
spec:
  replicas: 1
  selector:
    matchLabels:
      app: team2
  template:
    metadata:
      labels:
        app: team2
    spec:
      containers:
      - name: tools
        image: farrukhsadykov/tools:v6
      - name: team2
        image: wordpress:latest
        ports:
        - containerPort: 80
